--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,7 @@
             </figure>
         </section>
 
-        <section
-            id="service"
-            class="swrap apatternized aswrap--light atext-center aswrap--nobtm afeles"
-        >
+        <section id="service" class="swrap apatternized aswrap--light atext-center aswrap--nobtm afeles">
             <div class="">
                 <h2 class="nicetitle nicetitle--accent">
                     Természetes hatású smink&shy;tetoválás
@@ -48,10 +45,9 @@
                 </h2>
                 <div class="lead alead--accent alead--narrow">
                     <p>
-                        Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. A sminktetoválás
-                        a természetes szépséged emeli ki. Ideális megoldás azoknak akik reggel
-                        sietnek. Ajánlott még szemüveget viselőknek és azoknak akik tartósan
-                        szeretnének elrejteni egy-egy szépséghibát.
+                        Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. A sminktetoválás a természetes
+                        szépséged emeli ki. Ideális megoldás azoknak akik reggel sietnek. Ajánlott még szemüveget
+                        viselőknek és azoknak akik tartósan szeretnének elrejteni egy-egy szépséghibát.
                     </p>
                 </div>
             </div>
@@ -65,37 +61,28 @@
             <div id="servicelist" class="servicelist swrap">
                 <div class="servicecard">
                     <h3 class="servicecard__title">
-                        <a href="szemoldoktetovalas.html">
-                            Szemöldök tetoválás<em>Csodálatos formáért</em>
-                        </a>
+                        <a href="szemoldoktetovalas.html"> Szemöldök tetoválás<em>Csodálatos formáért</em> </a>
                     </h3>
                     <p>
-                        A szemöldök emeli ki az egész arcot. A legkisebb korrekció is pozitív
-                        változást eredményez. A tetovált szemöldök mindig megfelelő formáját mutatja.
-                        A szabálytalan vagy hiányzó szőrnövekedés finom pigmentációval kompenzálható.
-                        További árnyalatok növelik az expresszivitást. Az eredmény egy tökéletes ívű,
-                        de természetes hatású szemöldök.
+                        A szemöldök emeli ki az egész arcot. A legkisebb korrekció is pozitív változást eredményez. A
+                        tetovált szemöldök mindig megfelelő formáját mutatja. A szabálytalan vagy hiányzó szőrnövekedés
+                        finom pigmentációval kompenzálható. További árnyalatok növelik az expresszivitást. Az eredmény
+                        egy tökéletes ívű, de természetes hatású szemöldök.
                     </p>
-                    <a href="szemoldoktetovalas.html" class="servicecard__action fauxbtn"
-                        >Részletek</a
-                    >
+                    <a href="szemoldoktetovalas.html" class="servicecard__action fauxbtn">Részletek</a>
                 </div>
 
                 <div class="servicecard">
                     <h3 class="servicecard__title">
-                        <a href="szemhejtetovalas.html">
-                            Szemhéj tetoválás<em>Elbűvölő tekintetért</em>
-                        </a>
+                        <a href="szemhejtetovalas.html"> Szemhéj tetoválás<em>Elbűvölő tekintetért</em> </a>
                     </h3>
                     <p>
-                        Egy finom vonal a felső szemhéjon, mely diszkréten elrejti a szempillák
-                        hiányát, és kereted ad a szemnek. Diszkrét kontúrvonal az alsó szemhéjon és a
-                        szemeid ragyogni fognak. Nincs több bosszantó elmosódó smink. Kontúr
-                        tetoválással vagy pillatő sűrítéssel szemeid tartós hangsúlyt kapnak.
+                        Egy finom vonal a felső szemhéjon, mely diszkréten elrejti a szempillák hiányát, és kereted ad a
+                        szemnek. Diszkrét kontúrvonal az alsó szemhéjon és a szemeid ragyogni fognak. Nincs több
+                        bosszantó elmosódó smink. Kontúr tetoválással vagy pillatő sűrítéssel szemeid tartós hangsúlyt
+                        kapnak.
                     </p>
-                    <a href="szemhejtetovalas.html" class="servicecard__action fauxbtn"
-                        >Tudj meg többet</a
-                    >
+                    <a href="szemhejtetovalas.html" class="servicecard__action fauxbtn">Tudj meg többet</a>
                 </div>
 
                 <div class="servicecard">
@@ -103,11 +90,10 @@
                         <a href="szajtetovalas.html"> Száj tetoválás <em>Álom ajkakért</em> </a>
                     </h3>
                     <p>
-                        Élettel teli ajkak egész nap. Minden nap. A rúzsok és sminktükör már a múlté.
-                        Az egyenletlen vonalakat szabályos ívekké varázsoljuk. Válassz természetes
-                        színt, vagy egy divatos erősebb árnyalatot. Az ajaktetoválás mindenkinek jól
-                        áll. Nincs több elmosódott kontúr. Ehetsz, ihatsz bátran, szabadon
-                        sportolhatsz és még csókálló is!
+                        Élettel teli ajkak egész nap. Minden nap. A rúzsok és sminktükör már a múlté. Az egyenletlen
+                        vonalakat szabályos ívekké varázsoljuk. Válassz természetes színt, vagy egy divatos erősebb
+                        árnyalatot. Az ajaktetoválás mindenkinek jól áll. Nincs több elmosódott kontúr. Ehetsz, ihatsz
+                        bátran, szabadon sportolhatsz és még csókálló is!
                     </p>
                     <a href="szajtetovalas.html" class="servicecard__action fauxbtn">
                         Szolgáltatás részletei
@@ -127,25 +113,37 @@
             <div class="picandtext__content">
                 <h2 class="nicetitle">Jónás Diána<em>sminktetováló művész</em></h2>
                 <p class="hero__lead">
-                    Dia a legapróbb részletekben is tökéletességre törekszik. Vendégei boldogan és
-                    elégedetten viselik kifinomult munkája eredményét.
+                    Dia a legapróbb részletekben is tökéletességre törekszik. Vendégei boldogan és elégedetten viselik
+                    kifinomult munkája eredményét.
                 </p>
                 <p>
-                    Pályályafutását szerencsés módon Hamburgban kezdte kozmetiskusként. Hazatérve
-                    magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban
-                    ezzel fog foglalkozni.
+                    Pályályafutását szerencsés módon Hamburgban kezdte kozmetiskusként. Hazatérve magával ragadata a
+                    sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban ezzel fog foglalkozni.
                 </p>
                 <p>
-                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
-                    tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Négy év
-                    gyakorlat után jött el az idő, hogy saját szalont nyisson.
+                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél tanulta. Ez utóbiban
+                    később sminktetováló oktatóként is dolgozott. Négy év gyakorlat után jött el az idő, hogy saját
+                    szalont nyisson.
                 </p>
                 <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
                 <a href="#imageswipe" class="fauxbtn">Nézz körül a stúdióban</a>
             </div>
         </section>
+        <div class="swrap swrap--dark aswrap--keskeny patternized bordered">
+            <h3 class="nicetitle">
+                Időt álló és tartós beavatkozás<em>Ne kockáztass. Válassz profi sminktetoválót!</em>
+            </h3>
+            <div class="lead">
+                <p>
+                    Sminktetoválásodat hosszú-hosszú ideig fogod viselni. Nagyon fontos a tökéletes forma- és
+                    színválasztás továbbá a precíz kivitelezés. Leinformálható referenciákkal rendelkező, korszerű
+                    eszközöket és minőségi alapanyagokat használó szakembert válassz.
+                </p>
+                <a href="#" class="fauxbtn">Lépj kapcsolatba velünk</a>
+            </div>
+        </div>
 
-        <section id="testimonials" class="testimonials swrap aswrap--light apatternized bordered">
+        <section id="testimonials" class="testimonials swrap aswrap--light apatternized abordered">
             <h2 class="nicetitle nicetitle--accent">
                 Vendégeink mondták rólunk
                 <em>Köszönjük, hogy minket választottak</em>
@@ -156,16 +154,12 @@
                         <li class="glide__slide">
                             <blockquote class="testicard">
                                 <p>
-                                    Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha
-                                    valaki elrontja az arcodat, nincs fájdalom! Kedves, őszinte lány
-                                    és nagyon hangulatos kis helye van, ahol igazán le lehet
-                                    ereszteni, amíg ott vagy. Imádom
+                                    Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha valaki elrontja az
+                                    arcodat, nincs fájdalom! Kedves, őszinte lány és nagyon hangulatos kis helye van,
+                                    ahol igazán le lehet ereszteni, amíg ott vagy. Imádom
                                 </p>
                                 <cite>
-                                    <img
-                                        src="//source.unsplash.com/random/200x200/?portraiture"
-                                        alt=""
-                                    />
+                                    <img src="//source.unsplash.com/random/200x200/?portraiture" alt="" />
                                     Kling Szandra
                                     <span>Teljes generál 2 évente</span></cite
                                 >
@@ -174,18 +168,14 @@
                         <li class="glide__slide">
                             <blockquote class="testicard">
                                 <p>
-                                    Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat.
-                                    Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom,
-                                    hogy a sminkem tökéletes Imádom a szám, a szemöldököm, és a
-                                    szememet is. Köszönöm. Most voltam Nálad harmadszorra, és
-                                    megdöbbente, hogy se a szám, se a szemöldökém, se a szememnél nem
-                                    éreztem fájdalmat, szuper vagy.
+                                    Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat. Reggelente amikor
+                                    felkelek, és belenézek a tükröbe, konstatálom, hogy a sminkem tökéletes Imádom a
+                                    szám, a szemöldököm, és a szememet is. Köszönöm. Most voltam Nálad harmadszorra, és
+                                    megdöbbente, hogy se a szám, se a szemöldökém, se a szememnél nem éreztem fájdalmat,
+                                    szuper vagy.
                                 </p>
                                 <cite>
-                                    <img
-                                        src="//source.unsplash.com/random/202x202/?headshot"
-                                        alt=""
-                                    />
+                                    <img src="//source.unsplash.com/random/202x202/?headshot" alt="" />
                                     Patik Marta
                                     <span>3 éve szájtetováltat</span></cite
                                 >
@@ -194,18 +184,14 @@
                         <li class="glide__slide">
                             <blockquote class="testicard">
                                 <p>
-                                    Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat.
-                                    Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom,
-                                    hogy a sminkem tökéletes Imádom a szám, a szemöldököm, és a
-                                    szememet is. Köszönöm. Most voltam Nálad harmadszorra, és
-                                    megdöbbente, hogy se a szám, se a szemöldökém, se a szememnél nem
-                                    éreztem fájdalmat, szuper vagy.
+                                    Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat. Reggelente amikor
+                                    felkelek, és belenézek a tükröbe, konstatálom, hogy a sminkem tökéletes Imádom a
+                                    szám, a szemöldököm, és a szememet is. Köszönöm. Most voltam Nálad harmadszorra, és
+                                    megdöbbente, hogy se a szám, se a szemöldökém, se a szememnél nem éreztem fájdalmat,
+                                    szuper vagy.
                                 </p>
                                 <cite>
-                                    <img
-                                        src="//source.unsplash.com/random/202x202/?headshot"
-                                        alt=""
-                                    />
+                                    <img src="//source.unsplash.com/random/202x202/?headshot" alt="" />
                                     Patik Marta
                                     <span>3 éve szájtetováltat</span></cite
                                 >
@@ -216,12 +202,7 @@
             </div>
         </section>
 
-        <section
-            id="imageswipe"
-            class="imageswipe"
-            itemscope
-            itemtype="http://schema.org/ImageGallery"
-        >
+        <section id="imageswipe" class="imageswipe" itemscope itemtype="http://schema.org/ImageGallery">
             <figure class="imageswipe__item">
                 <a href="#"><img src="images/studiophotos/elysianstudio-09.jpg" alt=""/></a>
             </figure>
@@ -340,9 +321,7 @@
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
-                <a href="#" class="mobilepanelclose"
-                    ><img src="images/icons/circle-with-cross.svg" alt=""
-                /></a>
+                <a href="#" class="mobilepanelclose"><img src="images/icons/circle-with-cross.svg" alt=""/></a>
             </div>
         </section>
     </body>
