--- a/src/szemoldoktetovalas.html
+++ b/src/szemoldoktetovalas.html
@@ -29,7 +29,7 @@
                 <p class="hero__lead">
                     Tökéletes ívű szemöldököd mindig a legszebb formáját fogja mutatni.
                 </p>
-                <a href="#main" class="fauxbtn">mutasd a képeket</a>
+                <a href="#imageswipe" class="fauxbtn">mutasd a képeket</a>
             </div>
             <figure class="hero__fig">
                 <img src="images/szemoldok.jpg" alt="" />
@@ -43,52 +43,46 @@
                 </h1>
                 <div class="lead">
                     <p>
-                        Szemöldököd nagymértékben befolyásolja az arckifejezésedet. A szemöldökön
-                        végzet átalakítás talán a legnagyobb kihívás a szakember számára, hiszen egy
-                        helyén való-, jól eltalált korrekció nagyon látványos átalakulást eredményez.
-                        Míg egy rosszul választott forma vagy technika természet ellenes irányba
-                        változtathatja meg az arcod karakterét!
+                        Szemöldököd nagymértékben befolyásolja az arckifejezésedet. A szemöldökön végzet átalakítás
+                        talán a legnagyobb kihívás a szakember számára, hiszen egy helyén való-, jól eltalált korrekció
+                        nagyon látványos átalakulást eredményez. Míg egy rosszul választott forma vagy technika
+                        természet ellenes irányba változtathatja meg az arcod karakterét!
                     </p>
                 </div>
             </div>
             <div class="swrap swrap--dark picandtext bordered patternized">
                 <figure class="picandtext__foto">
-                    <img
-                        src="//source.unsplash.com/random/800x1200/?beuty,makeup"
-                        alt="Szemöldök tetoválás"
-                    />
+                    <img src="//source.unsplash.com/random/800x1200/?beuty,makeup" alt="Szemöldök tetoválás" />
                     <!-- <figcaption>
                                     Jónás Diána
                                     <em>Sminktetováló művész</em>
                                 </figcaption> -->
                 </figure>
-                <div class="picandtext__content">
+                <div class="picandtext__content copytext">
                     <h2>Szemöldök tetoválási technikák</h2>
                     <p>
-                        Ma már mindenki megtalálhatja azt a szemöldöktetoválási technikát, ami a
-                        leginkább személyiségéhez illik. Akár teljesen élethű, természetes
-                        microblading szemöldöktetoválástól a sminkelt, púderes hatású technikáig.
+                        Ma már mindenki megtalálhatja azt a szemöldöktetoválási technikát, ami a leginkább
+                        személyiségéhez illik. Akár teljesen élethű, természetes microblading szemöldöktetoválástól a
+                        sminkelt, púderes hatású technikáig.
                     </p>
                     <h4>I. Természetes hatású szál tetoválás</h4>
                     <p>
-                        Az egyik legnépszerűbb tetoválás, természetessége miatt. A saját szemöldök
-                        színéhez leginkább hasonló pigmentet használva szálakat tetoválunk, ami
-                        dúsítja, kiegészíti a ritkás szemöldököt. Zsírosabb bőrű, tág pórusú
-                        vendégeknek nem ajánlott.
+                        Az egyik legnépszerűbb tetoválás, természetessége miatt. A saját szemöldök színéhez leginkább
+                        hasonló pigmentet használva szálakat tetoválunk, ami dúsítja, kiegészíti a ritkás szemöldököt.
+                        Zsírosabb bőrű, tág pórusú vendégeknek nem ajánlott.
                     </p>
                     <h4>II. Sminkelt hatású “púderes/füstös” szemöldök tetoválás</h4>
                     <p>
-                        Egyre divatosabb a púderes technika, amivel a mindennapokra is tökéletes
-                        enyhén sminkelt hatás érhető el. Színválasztástól és technikától függöen
-                        elérhetünk természetes és erösebb, sminkelt hatást is. Hosszú távon a
-                        legszebb és legfenntarthatóbb tetoválás minden bőrtípusnak.
+                        Egyre divatosabb a púderes technika, amivel a mindennapokra is tökéletes enyhén sminkelt hatás
+                        érhető el. Színválasztástól és technikától függöen elérhetünk természetes és erösebb, sminkelt
+                        hatást is. Hosszú távon a legszebb és legfenntarthatóbb tetoválás minden bőrtípusnak.
                     </p>
 
                     <h4>III. Kombinált szemöldök tetoválás</h4>
                     <p>
-                        A szemöldök elejére szálakat húzunk, de alul és a végén hangsúlyosabbá
-                        tesszük a púderes technikával. Tökéletes kombináció, de érdemes megjegyezni,
-                        hogy csak a normál vagy száraz bőrben kaphatunk szép eredményt
+                        A szemöldök elejére szálakat húzunk, de alul és a végén hangsúlyosabbá tesszük a púderes
+                        technikával. Tökéletes kombináció, de érdemes megjegyezni, hogy csak a normál vagy száraz bőrben
+                        kaphatunk szép eredményt
                     </p>
                 </div>
             </div>
@@ -97,61 +91,56 @@
                 <div class="twocolumns copytext">
                     <h3>Kezelés menete, hossza</h3>
                     <p>
-                        Előrajzolás az egyik legfontosabb része a munkának. Akár 30-40 percig is
-                        készítjük az előrajzolást a legelőnyösebb eredményre törekszünk. Speciális
-                        ceruzával rajzolunk, amit nem távolítunk el a tetoválás előtt.
+                        Előrajzolás az egyik legfontosabb része a munkának. Akár 30-40 percig is készítjük az
+                        előrajzolást a legelőnyösebb eredményre törekszünk. Speciális ceruzával rajzolunk, amit nem
+                        távolítunk el a tetoválás előtt.
                     </p>
                     <p>
-                        Az érzéstelenítő felvitele után pár perccel el is kezdjük a pigment
-                        bedolgozását a bőrbe, ami újabb 30-40 percet vesz igénybe, a kezelt terület
-                        nagyságától függően.
+                        Az érzéstelenítő felvitele után pár perccel el is kezdjük a pigment bedolgozását a bőrbe, ami
+                        újabb 30-40 percet vesz igénybe, a kezelt terület nagyságától függően.
                     </p>
                     <h3>Fájdalom</h3>
                     <p>
-                        Legkorszerűbb érzéstelenítőknek hála a fájdalom egyáltalán nem, vagy enyhén
-                        érezhető.
+                        Legkorszerűbb érzéstelenítőknek hála a fájdalom egyáltalán nem, vagy enyhén érezhető.
                     </p>
 
                     <p></p>
                     <h3>Utókezelés</h3>
                     <p>
-                        A sminktetoválás után a bőrfelületet speciális bőrfertőtlenítővel
-                        fertőtlenítem, a sminktetoválást lezáró utóápolóval lezárom. Mindenkinek
-                        saját, sterilen lezárt utóápolót adunk a további otthoni ápolásra. Az
-                        utóápolóval a következő 5-7 napban folyamatosan szigorúan vékony réteggel
-                        ápolni kell.
+                        A sminktetoválás után a bőrfelületet speciális bőrfertőtlenítővel fertőtlenítem, a
+                        sminktetoválást lezáró utóápolóval lezárom. Mindenkinek saját, sterilen lezárt utóápolót adunk a
+                        további otthoni ápolásra. Az utóápolóval a következő 5-7 napban folyamatosan szigorúan vékony
+                        réteggel ápolni kell.
                     </p>
                     <h3>Korrekció és véglegesítés</h3>
                     <p>
-                        Korrekcióra 3-6 héttel a tetoválás után azért van szükség, hogy a hiányosnak
-                        vélt részeket korrigálni, az ívet és színt még alakítani tudjuk. Korrekció
-                        után éri el végleges formáját a megálmodott sminktetoválás.
+                        Korrekcióra 3-6 héttel a tetoválás után azért van szükség, hogy a hiányosnak vélt részeket
+                        korrigálni, az ívet és színt még alakítani tudjuk. Korrekció után éri el végleges formáját a
+                        megálmodott sminktetoválás.
                     </p>
                     <h3>Grancia és tartósság</h3>
                     <p>
-                        A sminktetoválás intenzitása és tartóssága teljesen egyénfüggő. A szemöldök
-                        és szemhéj tetoválást 1-2 évente, még a szájtetoválást elég 2-3 évente
-                        frissíteni.
+                        A sminktetoválás intenzitása és tartóssága teljesen egyénfüggő. A szemöldök és szemhéj
+                        tetoválást 1-2 évente, még a szájtetoválást elég 2-3 évente frissíteni.
                     </p>
                     <h3>Ellenjavallatok</h3>
                     <ul>
-                        <li>Betegség, láz esetén nem végezzük el a sminktetoválást.</li>
-                        <li>
-                            Krónikus vagy hosszabb betegség, állandó gyógyszerszedés esetén csak a
-                            kezelőorvos beleegyezése után készítjük el a sminktetoválást. Pl.
-                            véralvadási zavarok, cukorbetegség vagy pajzsmirigy betegség
+                        <li>Betegség, láz esetén nem végezzük el a sminktetoválást.
                         </li>
-                        <li>
-                            Terhesség és szoptatás esetén nem javasoljuk a sminktetoválások
-                            készítését, hiszen a bőrbe való beépülését is módosítja a színeknek!
+                        <li>Krónikus vagy hosszabb betegség, állandó gyógyszerszedés esetén csak a kezelőorvos
+                            beleegyezése után készítjük el a sminktetoválást. Pl. véralvadási zavarok, cukorbetegség
+                            vagy pajzsmirigy betegség
                         </li>
-                        <li>
-                            Kérjük, bejelentkezéskor tudasd velünk van-e a tetoválandó felületen
-                            anyajegyed vagy szemölcsöd!
+                        <li>Terhesség és szoptatás esetén nem javasoljuk a sminktetoválások készítését, hiszen a bőrbe
+                            való beépülését is módosítja a színeknek!
+                        </li>
+                        <li>Kérjük, bejelentkezéskor tudasd velünk van-e a tetoválandó felületen anyajegyed vagy
+                            szemölcsöd!
                         </li>
                     </ul>
                 </div>
             </div>
+
             <section
                 id="imageswipe"
                 class="imageswipe imageswipe--tiny"
@@ -202,22 +191,18 @@
                 </figure>
             </section>
 
-            <div class="swrap swrap--dark aswrap--keskeny">
+            <div class="swrap aswrap--dark aswrap--keskeny patternized bordered">
+                <h3 class="nicetitle">
+                    Időt álló és tartós beavatkozás<em>Ne kockáztass. Válassz profi sminktetoválót!</em>
+                </h3>
                 <div class="lead">
                     <p>
-                        Sminktetoválásod hosszú-hosszú ideig látható lesz, ezért fontos, hogy az
-                        tökéletesen legyen elkészítve. Nem elég meglátni azt, hogy milyen forma és
-                        szín áll jól neked, meg is kell tudni valósítani a legkorszerűbb eszközökkel.
-                        Fontos, hogy olyan szakembert válassz, aki kizárólag minőségi, leinformálható
-                        anyagokat használ munkája során.
+                        Sminktetoválásodat hosszú-hosszú ideig fogod viselni. Nagyon fontos a tökéletes forma- és
+                        színválasztás továbbá a precíz kivitelezés. Leinformálható referenciákkal rendelkező, korszerű
+                        eszközöket és minőségi alapanyagokat használó szakembert válassz.
                     </p>
+                    <a href="#" class="fauxbtn">Lépj kapcsolatba velünk</a>
                 </div>
-            </div>
-            <div class="swrap swrap--light aswrap--keskeny">
-                <h3>
-                    A pontos tervezés, és a megfelelő szín választás után a vendégek arcán az
-                    elégedett mosoly a legnagyobb öröm számunkra.
-                </h3>
             </div>
         </main>
 
@@ -276,9 +261,7 @@
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
-                <a href="#" class="mobilepanelclose"
-                    ><img src="images/icons/circle-with-cross.svg" alt=""
-                /></a>
+                <a href="#" class="mobilepanelclose"><img src="images/icons/circle-with-cross.svg" alt=""/></a>
             </div>
         </section>
     </body>
